fix(style): login page and signup page header z-index style fail

--- a/src/layouts/AppLayout/AppLayout.module.scss
+++ b/src/layouts/AppLayout/AppLayout.module.scss
@@ -7,6 +7,7 @@
   .header {
     position: sticky;
     top: 0;
+    z-index: 10;
   }
 
   .main {
