--- a/src/views/Login/Login.module.scss
+++ b/src/views/Login/Login.module.scss
@@ -1,7 +1,8 @@
 .login {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
+  position: relative;
 
   .content {
     flex-basis: auto;
