--- a/src/views/Register/Register.module.scss
+++ b/src/views/Register/Register.module.scss
@@ -1,6 +1,6 @@
 .register {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   overflow-x: hidden;
 
@@ -111,7 +111,7 @@
   .bg {
     flex: 1;
     width: 385px;
-    height: 100vh;
+    min-height: 100%;
     order: 1;
     background-image: url(https://assets.mongodb-cdn.com/mms/static/images/auth/login_desktop.png);
     background-repeat: no-repeat;
